# pi-ble-keyboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
archive/: bt_keyboard_v1.py  bt_keyboard_v2.py  bt_keyboard_v3.py  bt_keyboard_v4.py  bt_keyboard_v5.py
deploy/systemd/: bt-le-only.service  bt-le-only.sh  pi-keyboard.service
keyboard/src/btkeyboard/: __init__.py  __main__.py  agent.py  gatt.py  hid_descriptor.py  keymap.py
keyboard/tests/: test_faults.py  test_typing.py
mouse-ble/src/btmouse/: command_socket.py  gatt.py  hid_descriptor.py  report.py  server.py
mouse-ble/tests/: test_mouse.py
mouse/src/btmouse/: __init__.py  __main__.py  advertisement.py  agent.py  gatt.py  server.py
pi/: bt-keyboard.service  start_bt_keyboard.sh
src/btkeyboard/: __init__.py  __main__.py  advertisement.py  agent.py  command_socket.py  gatt.py  hid_descriptor.py  keymap.py  report.py  server.py  typing.py
tests/: __init__.py  test_hid_descriptor.py  test_integration.py  test_keymap.py  test_report.py
