[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "btkeyboard"
version = "2.0.0"
description = "BLE HID Keyboard — turn a Raspberry Pi into a Bluetooth keyboard for iOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["bluetooth", "ble", "hid", "keyboard", "ios", "raspberry-pi", "bluez"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

# Runtime deps: only needed on the Pi (Linux). The pure-Python modules
# (keymap, report, hid_descriptor, typing) have zero dependencies and can
# be tested on any platform including CI.
dependencies = [
    "dbus-python>=1.3",
    "PyGObject>=3.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
bt-keyboard = "btkeyboard.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["btkeyboard"]
omit = ["*/__main__*", "*/server.py", "*/gatt.py", "*/advertisement.py", "*/agent.py"]
